# meraki-openconnect

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
chrome-extension/: background.js  manifest.json  setup.html  setup.js  start.html  start.js
docs/designs/: 2026-07-20-agent-setup-prompt-design.md
examples/: profile.example.json
macos/MerakiOpenConnect/MerakiOpenConnect/: AppDelegate.swift  CLIModels.swift  Info.plist  MenuContentView.swift  MerakiOpenConnectApp.swift  ProcessVPNCLI.swift  VPNController.swift
macos/MerakiOpenConnect/MerakiOpenConnect.xcodeproj/: project.pbxproj
native/: Makefile  policy.c  policy.h  protocol.c  protocol.h  worker.c  worker_io.c  worker_io.h
native/tests/: test_policy.c  test_protocol.c
scripts/: check-public-tree.sh
setup-instructions/: setup.md
src/meraki_openconnect/: __init__.py  authenticator.py  callback.py  chrome.py  cli.py  extension_setup.py  health.py  native_host.py  pin.py  privileged.py  profile.py  readiness.py  root_policy.py  saml.py  service.py  settings.py  setup.py  tunnel.py
tests/: test_authenticator.py  test_callback.py  test_chrome.py  test_cli.py  test_extension.py  test_extension_setup.py  test_health.py  test_native_host.py  test_package_contents.py  test_pin.py  test_privileged.py  test_profile.py  test_readiness.py  test_root_policy.py  test_saml.py  test_service.py  test_settings.py  test_setup.py  test_setup_instructions.py  test_tunnel.py
(+5 files in other folders)
